# atlas-cli

./: Cargo.toml  README.md
.github/workflows/: codeql.yml  run-tests.yml  scorecard.yml
examples/src/subcommands/: manifest.rs
examples/workflows/mnist/: README.md
examples/workflows/oss25_demo/: README.md
src/manifest/: common.rs
src/signing/: mod.rs  utils.rs
src/tests/: manifest.rs
storage_service/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  compose.yml
storage_service/src/: hash.rs  main.rs  tests.rs
storage_service/src/merkle_tree/: hasher.rs  mod.rs  proof.rs  tree.rs
